; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/crypto/extr_sha3_256_s390.c_sha3_256_init.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/crypto/extr_sha3_256_s390.c_sha3_256_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shash_desc = type { i32 }
%struct.s390_sha_ctx = type { i32, i64, i32 }

@CPACF_KIMD_SHA3_256 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.shash_desc*)* @sha3_256_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sha3_256_init(%struct.shash_desc* %0) #0 {
  %2 = alloca %struct.shash_desc*, align 8
  %3 = alloca %struct.s390_sha_ctx*, align 8
  store %struct.shash_desc* %0, %struct.shash_desc** %2, align 8
  %4 = load %struct.shash_desc*, %struct.shash_desc** %2, align 8
  %5 = call %struct.s390_sha_ctx* @shash_desc_ctx(%struct.shash_desc* %4)
  store %struct.s390_sha_ctx* %5, %struct.s390_sha_ctx** %3, align 8
  %6 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @memset(i32 %8, i32 0, i32 4)
  %10 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %11 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @CPACF_KIMD_SHA3_256, align 4
  %13 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %14 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  ret i32 0
}

declare dso_local %struct.s390_sha_ctx* @shash_desc_ctx(%struct.shash_desc*) #1

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
